--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -2,7 +2,7 @@
 
 footer{
     width: 100vw;
-    height: 100px;
+    // height: 100px;
     background-color: $main-color;
     box-shadow: $main-box-shadow;
     padding: 22px 97px;
