--- a/src/scss/noorida.scss
+++ b/src/scss/noorida.scss
@@ -2,18 +2,103 @@
 
 #noorida-component{
 
+    img{
+        width: 45%;
+        border: 1px solid gray;
+        // height: 80%;
+    }
+
     .noorida-func{
-        .noorida-func--flex{
+        margin-left: 30px;
+        margin-bottom: 20px;
+        div{
             display: flex;
-            flex-direction: row;
-            span:nth-of-type(2){
-                display: flex;
-                flex-direction: column;
+            flex-direction: column;
+            font-size: 20px;
+        
+            span{
+                display: block;   
+            }
+            > span:nth-of-type(2){
+                margin-left: 10px;
             }
         }
+    
         .noorida-func--title{
             font-weight: bold;
-            // display: flex; 
+        }
+
+        
+    }
+    .noorida-content{
+        > div{
+            margin: 10px 0px 40px;
+        }
+        > div:nth-of-type(4){
+  
+            img{
+                width: 30%;
+            } 
+        }
+
+        > div:nth-of-type(4),
+        > div:nth-of-type(5){
+            div{
+                // text-align: center;
+                font-size: 16px;
+                font-weight: bold;
+            }
+        }
+    }
+}
+
+
+
+/**************************************************/
+
+@media (max-width: 1000px){
+    #noorida-component{
+        
+        img{
+            width: 90%;
+        }
+    }
+}
+@media (max-width: 740px){
+
+    #noorida-component{
+        .noorida-func{
+            div{
+                // font-size: 20px;
+                span{
+                
+                }
+                > span:nth-of-type(2){
+                    font-size: 18px;
+                }
+            }
+            .noorida-func--title{
+
+            } 
+        }
+        img{
+            // width: 50%;
+        }
+    }
+}
+
+@media (max-width: 450px){
+    #noorida-component{
+        .noorida-func{
+            margin-left: 12px;
+        }
+
+        .noorida-content{
+            > div:nth-of-type(4){
+                img{
+                    width: 80%;
+                } 
+            }
         }
     }
 }
