--- a/src/scss/pageCommom.scss
+++ b/src/scss/pageCommom.scss
@@ -1,3 +1,4 @@
+@import '_variables';
 
 body{
     background-color: white;
@@ -18,9 +19,17 @@ span{
 //     color: black;
 // }
 
+#project-component{
+    .goGithub{
+        @include goGithub;
+    }
+    
+}
+
+
 @media (max-width: 1000px){
     h1{
-        font-size: 30px;
+        font-size: 26px;
     }
     p{
         font-size: 18px;
@@ -35,5 +44,8 @@ span{
     }
     p{
         // font-size: 18px;
+    }
+    span{
+        font-size: 16px;
     }
 }
