--- a/src/scss/petBoard.scss
+++ b/src/scss/petBoard.scss
@@ -1,6 +1,6 @@
 @import '_variables';
 
-#project-component{
+.project-petboard{
     h1{
         margin: 30px;
     }
@@ -163,9 +163,7 @@
         margin: 50px;
     }
 
-    .goGithub{
-        @include goGithub;
-    }
+   
 }
 
 
@@ -173,7 +171,7 @@
 //************************--1000px--********************************************//
 
 @media (max-width: 1000px){
-    #project-component{
+    .project-petboard{
         h1{
             margin: 10px;
             // font-size: 30px;
@@ -211,7 +209,7 @@
 //************************--740px--********************************************//
 
 @media (max-width: 740px){
-    #project-component{
+    .project-petboard{
         img{
             width: 90%;
         }
@@ -305,7 +303,7 @@
 //************************--450px--********************************************//
 
 @media (max-width: 450px){
-    #project-component{
+    .project-petboard{
         h1{
             // font-size: 20px;
         }
