--- a/src/css/naver.css
+++ b/src/css/naver.css
@@ -1,3 +1,24 @@
 .visible-none {
   display: none;
 }
+
+#naver-component div:nth-of-type(1) img {
+  width: 90%;
+  border: 1px solid gray;
+}
+#naver-component span {
+  display: block;
+  margin: 20px 0px;
+}
+#naver-component div:nth-of-type(2) {
+  margin-top: 20px;
+}
+
+@media (max-width: 740px) {
+  #naver-component div:nth-of-type(1) img {
+    width: 100%;
+  }
+  #naver-component div:nth-of-type(2) img {
+    width: 90%;
+  }
+}
