--- a/src/scss/commom.scss
+++ b/src/scss/commom.scss
@@ -65,7 +65,7 @@
                 // border-radius: 4px;
             }
             span{
-                font-size: 20px;
+                // font-size: 20px;
             }
         }
     }
