--- a/src/scss/momentum.scss
+++ b/src/scss/momentum.scss
@@ -1,1 +1,28 @@
 @import "_variables";
+
+
+#momentum-component{
+
+    div:nth-of-type(1){
+        img{
+            width: 90%;
+        }
+    }
+    span{
+        display: block;
+        margin: 20px 0px;
+    }
+
+}
+
+
+@media (max-width: 740px){
+    #momentum-component{
+        div:nth-of-type(1){
+            img{
+                width: 100%;
+            }
+        }
+    }
+    
+}
