--- a/src/scss/naver.scss
+++ b/src/scss/naver.scss
@@ -1,1 +1,42 @@
 @import "_variables";
+
+#naver-component{
+
+    div:nth-of-type(1){
+        img{
+            width: 90%;
+            border: 1px solid gray;
+        }
+    }
+    span{
+        display: block;
+        // font-size: 20px;
+        margin: 20px 0px;
+    }
+
+    div:nth-of-type(2){
+       margin-top: 20px;
+
+    }
+
+}
+
+
+
+
+@media (max-width: 740px){
+    #naver-component{
+        div:nth-of-type(1){
+            img{
+                width: 100%;
+            }
+        }
+        div:nth-of-type(2){
+            img{
+                width: 90%;
+            }
+        }
+
+    }
+    
+}
