--- a/src/css/main.css
+++ b/src/css/main.css
@@ -156,13 +156,16 @@ body {
 }
 #main-container #project .project-nav button {
   margin: 30px 5px;
+  border: 3px solid black;
   background-color: white;
+  color: black;
   font-size: 30px;
   font-weight: bold;
   width: 200px;
   height: 60px;
 }
 #main-container #project .project-nav button:focus {
+  border: 3px solid rgb(66, 66, 66);
   background-color: rgb(26, 25, 25);
   color: white;
 }
@@ -455,6 +458,10 @@ body {
     font-size: 15px;
     width: 95px;
     height: 45px;
+    border: 2px solid black;
+  }
+  #main-container #project .project-nav button:focus {
+    border: 2px solid rgb(66, 66, 66);
   }
   #main-container #project .project-content .project-content--link {
     margin: 11px 10px;
