--- a/src/css/pageCommom.css
+++ b/src/css/pageCommom.css
@@ -30,6 +30,7 @@ span {
   border-radius: 100px;
   margin-right: 20px;
   background-color: transparent;
+  border: 1px solid black;
 }
 #project-component .goGithub button a, #project-component .goPage button a {
   text-decoration: none;
