--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -180,13 +180,16 @@
     .project-nav{
       button{
         margin: 30px 5px;
+        border: 3px solid black;
         background-color: white;
+        color: black;
         font-size: 30px;
         font-weight: bold;
         width: 200px;
         height: 60px;
       }
       button:focus{
+        border: 3px solid rgb(66, 66, 66);
         background-color: rgb(26, 25, 25);
         color: white;
       }
@@ -301,135 +304,112 @@
 
   padding-left: 30px;
 
-.contact--list{
-  @include flex-row;
-  justify-content: center;
-  // margin: ;
+  .contact--list{
+    @include flex-row;
+    justify-content: center;
+    // margin: ;
 
-  // height: 1000px;
+    // height: 1000px;
  
-  .contact--flip{
-    
-    width: 300px;
-    height: 300px;
-    //  위에 원래는300PX  
-    perspective: 1200px;
--webkit-backface-visibility: hidden;
-        backface-visibility: hidden; 
-    padding: 30px;
-    // justify-content: center;
-    margin-left: 20px;
-    // transform-style: preserve-3d;````
-  
-    overflow: visible;
-    .contact--card{
-
+    .contact--flip{
       
-      width: 100%;
-      height: 100%;
+      width: 300px;
+      height: 300px;
+      //  위에 원래는300PX  
+      perspective: 1200px;
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden; 
+      padding: 30px;
+      // justify-content: center;
+      margin-left: 20px;
+      // transform-style: preserve-3d;````
+      overflow: visible;
 
-      position: relative;
-     
-      transform-style: preserve-3d;
-      transition: all 1s;
+      .contact--card{
 
-      // transform: rotateY(180deg);    
-      border-radius: 10px;
-      box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.5);
-
-      .card--front, 
-      .card--back {
-        // -webkit-backface-visibility: hidden;
-        // backface-visibility: hidden;  
-        position: absolute;
-        width: 100%; 
+        width: 100%;
         height: 100%;
-        border-radius: 5px;
-      }
-  
-      .card--front{
-        // background-color: rgb(255, 246, 246);
-    
-        background: $contact-card-background-color;
-        z-index: 2;
-        // 디자인
-        font-size: 30px;
-        font-weight: bold;
-        // padding: 30px;
+        position: relative;
+        transform-style: preserve-3d;
+        transition: all 1s;
+        // transform: rotateY(180deg);    
+        border-radius: 10px;
+        box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.5);
 
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      .card--back{
-        transform: rotateY(180deg);
-        // background-color: rgb(211, 252, 255);
-        background: $contact-card-background-color;
-  
-        a{
-          font-size: 80px;
-          color: black;
-          // margin:auto;
-          text-decoration: none;
+        .card--front, 
+        .card--back {
+          // -webkit-backface-visibility: hidden;
+          // backface-visibility: hidden;  
+          position: absolute;
+          width: 100%; 
+          height: 100%;
+          border-radius: 5px;
+        }
+    
+        .card--front{
+          // background-color: rgb(255, 246, 246);
+      
+          background: $contact-card-background-color;
+          z-index: 2;
           // 디자인
-          width: 100%;
-          height: 100%; 
+          font-size: 30px;
+          font-weight: bold;
+          // padding: 30px;
+
           display: flex;
-          flex-direction: column;
-          align-items: center;
           justify-content: center;
-          p{
-            margin-top: 15px;
-            text-align: center;
-            font-size: 15px;
-            font-weight: bold;
+          align-items: center;
+        }
+
+        .card--back{
+          transform: rotateY(180deg);
+          // background-color: rgb(211, 252, 255);
+          background: $contact-card-background-color;
+    
+          a{
+            font-size: 80px;
+            color: black;
+            // margin:auto;
+            text-decoration: none;
+            // 디자인
+            width: 100%;
+            height: 100%; 
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            p{
+              margin-top: 15px;
+              text-align: center;
+              font-size: 15px;
+              font-weight: bold;
+            }
+          }
+          a:hover p{
+          color: rgb(106, 106, 122);
           }
         }
-        a:hover p{
-          color: rgb(106, 106, 122);
+
+        .contact--email{
+          font-size: 20px;
+          font-weight: bold;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
         }
       }
-
-
-      .contact--email{
-        font-size: 20px;
-        font-weight: bold;
-        
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-      }
-
-
     }
-    
-    
+
+    .contact--flip:hover .contact--card {
+      transform: rotateY(180deg);
+      // -webkit-backface-visibility: hidden;
+    }
+    .contact--flip:hover .card--front {
+      z-index: 0;
+      // -webkit-backface-visibility: hidden;
+    }
   }
-
-  .contact--flip:hover .contact--card {
-    transform: rotateY(180deg);
-    // -webkit-backface-visibility: hidden;
-  }
-  .contact--flip:hover .card--front {
-    z-index: 0;
-    // -webkit-backface-visibility: hidden;
-  }
-
-
-  
-
-  // .contact--blog{
-
-  // }
-}
-
-
-
-
-
-
-
 }
 
 
@@ -665,6 +645,10 @@
           font-size: 15px;
           width: 95px;
           height: 45px;
+          border: 2px solid black;
+        }
+        button:focus{
+          border: 2px solid rgb(66, 66, 66);
         }
       }
   
@@ -813,3 +797,4 @@
 
   
 }
+
