--- a/src/scss/pageCommom.scss
+++ b/src/scss/pageCommom.scss
@@ -35,7 +35,7 @@ span{
             border-radius: 100px;
             margin-right: 20px;
             background-color: transparent;
-           
+            border: 1px solid black;
             a{
                 text-decoration: none;
                 color: black;
