fix : cursor init

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -22,3 +22,8 @@ footer .footer-rights span {
     margin-bottom: 80px;
   }
 }
+@media (max-width: 450px) {
+  footer {
+    margin-bottom: 60px;
+  }
+}
