--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -56,3 +56,9 @@ footer{
         margin-bottom: 80px;
     }
 }
+
+@media (max-width: 450px) {
+    footer{
+        margin-bottom: 60px;
+    }
+}
