--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -37,6 +37,8 @@
       color: rgb(192 192 213);
       font-weight: bold;
       text-shadow: 0 1px 0 #777, 0 -1px 0 #000;
+      // text-shadow: 0 5px 0 #a56060, 0 19px 0 #1f2131; 이렇게 바꿀까 고민..!
+      //  2px 5px 0 #bd7474, 6px 11px 0 #764a7f 흠..
       display: flex;
       flex-direction: column;
       justify-content: start;
